--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<!-- Bootstrap CSS from CDN-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<!-- My CSS -->
-	<link rel="stylesheet" type="text/css" href="project/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<!-- Google Font -->
 </head>
 <body>
