--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="container">
-      <h2 class="label animate__animated animate__fadeInDown">Nature Is Our Home</h2>
+      <h2 class="label , animate__animated animate__fadeInDown">Nature Is Our Home</h2>
     <div class="btn-primary">
       <span><a href="https://mailchi.mp/f5b00630f621/naturehome">Learn More</a></span>
   </div>
