--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<!-- Google Font -->
 </head>
 <body>
-	<div class="container">
+	<div class="h-100 d-flex align-items-center justify-content-center">
       <h2 class="label animate__animated animate__bounceIn">Nature Is Our Home</h2>
     <div class="btn-primary">
       <span><a href="https://mailchi.mp/f5b00630f621/naturehome">Learn More</a></span>
