--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
 	<div class="h-100 d-flex align-items-center justify-content-center">
-      <h2 class="label animate__animated animate__bounceIn">Nature Is Our Home</h2>
-    <div class="btn-primary">
+      <h2 class="label">Nature Is Our Home</h2>
+    <div class="btn-primary animate__animated animate__bounceIn">
       <span><a href="https://mailchi.mp/f5b00630f621/naturehome">Learn More</a></span>
   </div>
 </div>
